syntax="proto3";

package ThmServices;

service Connection {
    rpc Login (LoginReq) returns (LoginRsp);
    rpc Logout (LogoutReq) returns (LogoutRsp);

    rpc Connect (ConnectReq) returns (ConnectRsp);
    rpc GetProviders (GetProvidersReq) returns (GetProvidersRsp);
}

message LoginReq {
    string user_id = 1;
    string password = 2;
}

message LoginRsp {
    int32 status = 1;
    string message = 2;
}

message LogoutReq {

}

message LogoutRsp {

}

enum PROVIDER_TYPE {
    Unknown = 0;
    ATP = 1;
    TT = 2;
    TITAN = 3;
}

message ConnectReq {
    PROVIDER_TYPE provider_type = 1;
    string account = 2;
    string customer_info = 3;
}

message ConnectRsp {
    string message = 1;
}

message GetProvidersReq {
}

message GetProvidersRsp {
    repeated Provider providers = 1;
}

message Provider {
    PROVIDER_TYPE provider_type = 1;
    repeated Exchange exchanges = 2;
}

message Exchange {
    string market = 1;
    string type = 2;
    repeated string contracts = 3;
}
